# flink-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter_generation.py
{{ cookiecutter.project_slug }}/: Dockerfile  pyproject.toml
{{ cookiecutter.project_slug }}/kubernetes/: service.yaml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: main.py
